--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "face-api.js": "^0.22.2",
+            "framer-motion": "^12.23.24",
             "input-otp": "^1.4.2",
+            "jspdf": "^3.0.3",
             "lucide-react": "^0.487.0",
             "motion": "*",
             "next-themes": "^0.4.6",
@@ -44,6 +47,7 @@
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
+            "react-webcam": "^7.2.0",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
