--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@tailwindcss/postcss": "^4.1.17",
             "autoprefixer": "^10.4.21",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
@@ -36,6 +37,7 @@
             "embla-carousel-react": "^8.6.0",
             "face-api.js": "^0.22.2",
             "framer-motion": "^12.23.24",
+            "i": "^0.3.7",
             "input-otp": "^1.4.2",
             "jspdf": "^3.0.3",
             "lucide-react": "^0.487.0",
@@ -51,7 +53,7 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "tailwindcss": "^4.1.16",
+            "tailwindcss": "^4.1.17",
             "vaul": "^1.1.2"
       },
       "devDependencies": {
