--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-DATABASE_URL="postgresql://postgres:mypassword@localhost:5432/healthcar?schema=public"
+DATABASE_URL="postgresql://postgres:mypassFord@localhost:5432/healthcar?schema=public"
