Add start and dev scripts to package.json

--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -16,3 +16,7 @@
     "express": "^5.1.0"
   }
 }
+"scripts": {
+  "start": "node backend/server/index.js",
+  "dev": "nodemon backend/server/index.js"
+}
